# website

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
frontend/: homepage.html
frontend/css/: style.css
frontend/js/: script.js
migrations/: 20240116205028_contactos_table.sql
scripts/: init_db.sh
src/: main.rs
