[package]
name = "website_sg"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
serde = {version = "1.0.193", features = ["derive"]}
tokio = "1.35.1"
regex = "1.5.6"
config = "0.13.4"
serde_json = "1.0.111"
dotenv = "0.15.0"
